--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+ion-icon{
+    color: #32B72F;
+    font-size: 16px;
+    margin-top: 7px;
+    display: none;
+}
 *{
     box-sizing: border-box;
 }
@@ -55,11 +61,14 @@ body{
 .item {
     margin-top: 17px;
     width: 172px;
-    height: 216px;
     background-color: white;
     border-radius: 9px;
     box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
-    padding: 18px 14px 0 14px;
+    padding: 18px 14px 16px 14px;
+}
+.item div {
+    display: flex;
+    justify-content: space-between;
 }
 .item img{
     width: 144px;
@@ -80,7 +89,7 @@ body{
     line-height: 18px;
     color: #A6A6A6;
 }
-.item p:last-child{
+.item div p{
     margin-top: 5px;
     font-weight: 400;
 }
@@ -109,4 +118,12 @@ body{
     text-align: center;
     color: #FFFFFF;
     border: none;
+}
+/*js*/
+
+.selecionado{
+    box-shadow: inset 0px 0px 0px 5px #32B72F;
+}
+.aparece{
+    display: block;
 }
