--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ ion-icon{
     font-size: 16px;
     margin-top: 7px;
     display: none;
+    z-index: 0;
 }
 *{
     box-sizing: border-box;
@@ -15,6 +16,7 @@ body{
     background-color: #CF2B2B;
     height: 92px;
     position: fixed;
+    z-index: 2;
     width: 100%;
     top: 0;
     left: 0;
